--- a/index.html
+++ b/index.html
@@ -109,8 +109,17 @@
                         <input type="url" id="website" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus-brand-ring focus:border-gray-300" placeholder="https://example.com">
                     </div>
                      <div>
-                        <label for="imageUrl" class="block text-sm font-medium text-gray-700">Profile Picture URL</label>
+                        <label for="imageUrl" class="block text-sm font-medium text-gray-700">Profile Picture/Logo URL</label>
                         <input type="url" id="imageUrl" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus-brand-ring focus:border-gray-300" placeholder="https://placehold.co/100x100">
+                    </div>
+                     <div>
+                        <label for="imageShape" class="block text-sm font-medium text-gray-700">Image Shape</label>
+                        <select id="imageShape" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus-brand-ring focus:border-gray-300">
+                            <option value="circle" selected>Circle</option>
+                            <option value="square">Square</option>
+                            <option value="wide">Wide (16:9)</option>
+                            <option value="standard">Standard (4:3)</option>
+                        </select>
                     </div>
                     <div>
                         <label for="statement" class="block text-sm font-medium text-gray-700">Statement / Disclaimer</label>
@@ -123,17 +132,17 @@
             <div class="lg:w-2/3">
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h2 class="text-2xl font-semibold mb-4 border-b pb-3">Live Preview</h2>
-                    <div id="signature-preview-container" class="p-4 border border-dashed border-gray-300 rounded-lg bg-gray-50 min-h-[200px]">
+                    <div id="signature-preview-container" class="p-4 border border-dashed border-gray-300 rounded-lg bg-gray-50 min-h-[200px] flex items-center justify-center">
                         <!-- The signature will be rendered here -->
                         <table id="signature-preview" cellpadding="0" cellspacing="0" style="border-collapse: collapse; font-family: 'Inter', sans-serif; color: #333;">
                             <tbody>
                                 <tr>
                                     <!-- Profile Picture -->
-                                    <td style="padding-right: 15px; vertical-align: top;">
-                                        <img id="preview-image" src="https://placehold.co/100x100/EFEFEF/3A3A3A?text=Photo" alt="Profile" width="100" height="100" style="border-radius: 50%; object-fit: cover;">
+                                    <td style="padding-right: 15px; vertical-align: middle;">
+                                        <img id="preview-image" src="https://placehold.co/100x100/EFEFEF/3A3A3A?text=Photo" alt="Profile" style="border-radius: 50%; width: 100px; height: 100px; object-fit: cover;">
                                     </td>
                                     <!-- Details -->
-                                    <td id="details-cell" style="border-left: 2px solid #cb2039; padding-left: 15px; vertical-align: top;">
+                                    <td id="details-cell" style="border-left: 2px solid #cb2039; padding-left: 15px; vertical-align: middle;">
                                         <p style="margin: 0; font-size: 18px; font-weight: bold; color: #000000;" id="preview-fullName">John Doe</p>
                                         <p style="margin: 2px 0; font-size: 14px; color: #555555;">
                                             <span id="preview-jobTitle">Software Engineer</span>
@@ -183,6 +192,7 @@
         const statementInput = document.getElementById('statement');
         const fontStyleInput = document.getElementById('fontStyle');
         const accentColorInput = document.getElementById('accentColor');
+        const imageShapeInput = document.getElementById('imageShape');
         const copyButton = document.getElementById('copyButton');
         const copySuccessMessage = document.getElementById('copy-success');
 
@@ -215,6 +225,7 @@
             const statement = statementInput.value;
             const fontStyle = fontStyleInput.value;
             const accentColor = accentColorInput.value;
+            const imageShape = imageShapeInput.value;
 
             // Update text content
             previewFullName.textContent = fullName;
@@ -250,10 +261,35 @@
             detailsCell.style.borderLeftColor = accentColor;
             previewEmailLink.style.color = accentColor;
             previewWebsiteLink.style.color = accentColor;
+
+            // Update image shape
+            switch (imageShape) {
+                case 'square':
+                    previewImage.style.borderRadius = '8px';
+                    previewImage.style.width = '100px';
+                    previewImage.style.height = '100px';
+                    break;
+                case 'wide':
+                    previewImage.style.borderRadius = '8px';
+                    previewImage.style.width = '128px';
+                    previewImage.style.height = '72px';
+                    break;
+                case 'standard':
+                    previewImage.style.borderRadius = '8px';
+                    previewImage.style.width = '120px';
+                    previewImage.style.height = '90px';
+                    break;
+                case 'circle':
+                default:
+                    previewImage.style.borderRadius = '50%';
+                    previewImage.style.width = '100px';
+                    previewImage.style.height = '100px';
+                    break;
+            }
         }
 
         // Add event listeners to all input fields to update the preview in real-time
-        const inputs = [fullNameInput, jobTitleInput, companyInput, phoneInput, emailInput, websiteInput, imageUrlInput, statementInput, fontStyleInput, accentColorInput];
+        const inputs = [fullNameInput, jobTitleInput, companyInput, phoneInput, emailInput, websiteInput, imageUrlInput, statementInput, fontStyleInput, accentColorInput, imageShapeInput];
         inputs.forEach(input => {
             input.addEventListener('input', updatePreview);
         });
