--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-//Made with Love by LV branding Developed By Luis Velasquez//
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -143,8 +142,8 @@
                         </div>
                     </div>
                     <div class="border-t pt-4">
-                        <label for="statement" class="block text-sm font-medium text-gray-700">Statement / Disclaimer</label>
-                        <textarea id="statement" rows="3" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus-brand-ring focus:border-gray-300" placeholder="e.g., This email and any attachments are confidential..."></textarea>
+                        <label for="statement" class="block text-sm font-medium text-gray-700">Slogan</label>
+                        <textarea id="statement" rows="2" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus-brand-ring focus:border-gray-300" placeholder="e.g., We innovate for you."></textarea>
                     </div>
                 </div>
             </div>
@@ -183,9 +182,9 @@
                                         <div id="preview-socials"></div>
                                     </td>
                                 </tr>
-                                <!-- Statement Row -->
+                                <!-- Slogan Row -->
                                 <tr id="statement-row" style="display: none;">
-                                    <td colspan="2" style="padding-top: 15px; font-size: 11px; color: #888888; font-style: italic;">
+                                    <td colspan="2" style="padding-top: 15px; font-size: 13px; color: #555555; font-weight: bold; text-align: center;">
                                         <p id="preview-statement" style="margin: 0;"></p>
                                     </td>
                                 </tr>
